2011-01-12 Magnus Hagdorn
 * Makefile.am: remove gold standard distribution directory once tar-balled
 * configure.in: make sure path to gold standard is absolute
 * extra_rules.am: report missing files; make sure data to be compared has been
   computed; only create directory if files are to be copied, use hard links
   rather than copy the files
 * example-drivers/Makefile.am: add a check-data target
 * example-drivers/EISMINT-3/Makefile.am: ditto
 * tests/EISMINT/EISMINT-1/Makefile.am: specify which data files are required
   for gold standard
 * tests/EISMINT/EISMINT-2/Makefile.am: ditto
 * tests/exact-isothermal/Makefile.am: add a check-data and dist-gold-standard
   target
 * tests/exact-isothermal/tests/Makefile.am: include extra_rules.am

2010-12-03 Sarah Shannon
 * extra_rules.am: add dist-gold-standard rule to create a tar file of test data	
 * Makefile.am: ditto
	
2010-11-25 Sarah Shannon
 * extra_rules.am: add check-data rule to compare tests to gold standards

2010-11-24 Magnus Hagdorn
 * extra_rules.am: add macro to find relative builddir path; use it to find
   gold standard files

2010-09-01 Magnus Hagdorn
 * PyGC/progs/plotEISMINT2stats: print legend if more than one file is
   specified on command line

2010-07-30 Magnus Hagdorn
 * extra_rules.am: pass all dependencies to glide launcher
 * PyGC/data/Makefile.am: add new file
 * PyGC/data/eismint.prof: add file containing profile for EISMINT plots
 * example-drivers/EISMINT-3/EISMINT-3/Makefile.am: remove jid files
 * example-drivers/eis/fenscan/Makefile.am: ditto
 * tests/EISMINT/EISMINT-1/Makefile.am: ditto
 * tests/EISMINT/EISMINT-2/Makefile.am: ditto
 * tests/EISMINT/benchmarks/Makefile.am: ditto
 * /tests/EISMINT/erosion/Makefile.am: ditto
 * tests/EISMINT/isos/Makefile.am: remove jid files; add some plotting
 * tests/EISMINT/lin-non_lin/Makefile.am: ditto
 * tests/exact-isothermal/tests/Makefile.am: ditto
 * scripts/glide_launch.py: use subprocess module to start glide; when